Added JS constants to be used in the Research Outputs feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -144,7 +144,10 @@
       AUTOCOMPLETE_ARIA_HELPER_EMPTY: _("No results are available for your entry."),
       AUTOCOMPLETE_SEARCHING: _("Searching ..."),
 
-      CURRENT_LOCALE: LocaleService.to_gettext(locale: @current_locale.to_s)
+      CURRENT_LOCALE: LocaleService.to_gettext(locale: @current_locale.to_s),
+
+      MORE_INFO: _("More info"),
+      LESS_INFO: _("Less info")
     }.to_json
     %>
 
