--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -65,6 +65,9 @@ code {
 
   /* Data Grid */
   --grid-gap: 1rem;
+  --grid-row-selected-bg: var(--dmpui-brand-gray-100);
+  --grid-row-selected-fg: var(--dmpui-brand-blue-900);
+  --grid-row-selected-border: 1px solid var(--dmpui-brand-blue-900);
 }
 
 
