--- a/app/views/org_admin/questions/_show.html.erb
+++ b/app/views/org_admin/questions/_show.html.erb
@@ -129,7 +129,7 @@
                               <h2 class="accordion-header" 
                                   id="#headingGuidance-<%= guidance.id%>-<%= question.id %>">
                                 <div class="accordion-button collapsed"
-                                     role="button"
+                                     type="button"
                                      data-bs-toggle="collapse"
                                      href="#collapseGuidance-<%= guidance.id%>-<%= question.id %>"
                                      aria-expanded="false"
