--- a/app/views/usage/_template_statistics_accordion.html.erb
+++ b/app/views/usage/_template_statistics_accordion.html.erb
@@ -2,11 +2,11 @@
 
  <div class="accordion-item w-100">
  <h2 class="accordion-header" id="headingTemplateStatistics">
-      <div href="#template_statistics" role="button"
+      <button href="#template_statistics" type="button"
              class="accordion-button collapsed" data-bs-toggle="collapse" 
              data-bs-target="#collapseTemplateStatistics" aria-expanded="false" aria-controls="collapseTemplateStatistics">
          <%= _('Statistics on your Templates') %>
-      </dic>
+      </button>
   </h2>
 
   <div id="collapseTemplateStatistics"
