--- a/app/views/usage/_user_statistics_accordion.html.erb
+++ b/app/views/usage/_user_statistics_accordion.html.erb
@@ -1,11 +1,11 @@
 <%# locals: expanded %>
  <div class="accordion-item w-100 my-3">
  <h2 class="accordion-header" id="headingUserStatistics">
-      <div href="#user_statistics" role="button"
+      <button href="#user_statistics" type="button"
              class="accordion-button collapsed" data-bs-toggle="collapse" 
              data-bs-target="#collapseUserStatistics" aria-expanded="false" aria-controls="collapseUserStatistics">
         <%= _('Statistics on your Users') %>
-      </div>
+      </button>
     </h2>
 
 
