--- a/app/views/guidance_groups/_show.html.erb
+++ b/app/views/guidance_groups/_show.html.erb
@@ -11,7 +11,7 @@
   <% end %>
   <% group.keys.each_with_index do |theme, i| %>
     <div class="accordion-item card card-default">
-      <div class="accordion-button collapsed" role="button" data-bs-toggle="collapse"
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
            data-bs-parent="#<%= question.id %>-guidance"
            href="#collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>"
            aria-expanded="false"
@@ -22,7 +22,7 @@
             <%= theme %>
           </h2>
         </div>
-      </div>
+      </button>
       <div id="collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>" class="accordion-collapse collapse" role="tabpanel"
          aria-labelledby="heading-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>">
         <div class="accordion-body">
