--- a/app/views/org_admin/sections/_index.html.erb
+++ b/app/views/org_admin/sections/_index.html.erb
@@ -90,14 +90,14 @@
      role="tablist">
       <div class="accordion-item w-100 my-3 section">
         <h2 class="accordion-header" role="tab" id="headingSectionNew">
-        <div href="#new_section" class="accordion-button collapsed" role="button"
+        <button href="#new_section" class="accordion-button collapsed" type="button"
            data-bs-toggle="collapse" data-bs-parent="sections-accordion"
            data-bs-target="#collapseSectionNew"
            aria-expanded="false"
            aria-controls="#collapseSectionNew">
 
           <%= _('Add a new section') %>
-        </div>
+        </button>
         </h2>
         <div
           id="collapseSectionNew" class="accordion-collapse collapse" role="tabpanel"
