--- a/app/views/org_admin/sections/_section.html.erb
+++ b/app/views/org_admin/sections/_section.html.erb
@@ -1,8 +1,8 @@
 <div class="accordion-item w-100 my-3 section" data-section-id="<%= section.id %>">
   <h2 class="accordion-header" role="tab" id="<%= "headingSection#{section.id}" %>">
-    <a
+    <button
       href="<%= header_path_for_section(section, phase, template) %>"
-      role="button"
+      type="button"
       data-remote="true"
       class="accordion-button collapsed ajaxified-section"
       data-bs-toggle="collapse"
@@ -11,7 +11,7 @@
       aria-expanded="false"
       aria-controls="#collapseSection<%= section.id %>">
       <%= section.title %>
-    </a>
+    </button>
     <% if local_assigns[:draggable] %>
       <i class="fas fa-arrows-alt" aria-hidden="true"
          title="Drag to reposition">
