updates to DMP ID registration and JSON download

--- a/app/views/branded/plans/_download_form.html.erb
+++ b/app/views/branded/plans/_download_form.html.erb
@@ -138,8 +138,7 @@
     </div>
   </div>
 
-  <%= button_tag(sanitize(_("Download Plan <em class=\"sr-only\">(new window)</em><span class=\"new-window-popup-info\">%{open_in_new_window_text}</span>") % { open_in_new_window_text: _('Opens in new window') },
-        tags: %w{ span em }),
+  <%= button_tag(_("Download Plan (new window)"),
       class: "btn btn-primary has-new-window-popup-info",
       type: "submit") %>
 <% end %>
