IssueID #3144 - Changed type to role in link for ajaxified link.

--- a/app/views/org_admin/sections/_section.html.erb
+++ b/app/views/org_admin/sections/_section.html.erb
@@ -2,7 +2,7 @@
   <h2 class="accordion-header" role="tab" id="<%= "headingSection#{section.id}" %>">
     <a
       href="<%= header_path_for_section(section, phase, template) %>"
-      type="button"
+      role="button"
       data-remote="true"
       class="accordion-button collapsed ajaxified-section"
       data-bs-toggle="collapse"
