IssueID #3144 - Added "card card-body" to divs with "accordion-body".

--- a/app/views/guidance_groups/_index_by_theme.html.erb
+++ b/app/views/guidance_groups/_index_by_theme.html.erb
@@ -36,7 +36,7 @@
             class="accordion-collapse collapse"
             role="tabpanel"
             aria-labelledby="<%= "card-heading-#{question_guidance_id}" %>">
-            <div class="accordion-body">
+            <div class="accordion-body card card-body">
               <% multiple = false %>
               <% guidances.each do |guidance| %>
                 <% if multiple %>
