--- a/app/views/org_admin/questions/_show.html.erb
+++ b/app/views/org_admin/questions/_show.html.erb
@@ -145,7 +145,7 @@
                                  class="accordion-collapse collapse"
                                  role="tabpanel"
                                  aria-labelledby="headingGuidance-<%= guidance.id%>-<%= question.id %>">
-                                <div class="accordion-body allow-break-words">
+                                <div class="accordion-body card card-body allow-break-words">
                                    <div class="display-readonly-textarea-content">
                                       <%= sanitize guidance.text %>
                                    </div>
