--- a/app/views/org_admin/sections/_index.html.erb
+++ b/app/views/org_admin/sections/_index.html.erb
@@ -104,7 +104,7 @@
         <div
           id="collapseSectionNew" class="accordion-collapse collapse" role="tabpanel"
           aria-labelledby="<%= "headingSectionNew" %>">
-           <div class="accordion-body">
+           <div class="accordion-body card card-body">
              <%= render partial: 'org_admin/sections/new',
                         locals: {
                           template: template,
