--- a/app/views/usage/_template_statistics_accordion.html.erb
+++ b/app/views/usage/_template_statistics_accordion.html.erb
@@ -14,7 +14,7 @@
        role="tabpanel" 
        aria-labelledby="headingTemplateStatistics"
        data-bs-parent="#usage-accordion">
-    <div class="accordion-body">
+    <div class="accordion-body card card-body">
       <%= render partial: 'usage/template_statistics' %>
     </div>
   </div>
