--- a/app/views/guidance_groups/_show.html.erb
+++ b/app/views/guidance_groups/_show.html.erb
@@ -25,7 +25,7 @@
       </button>
       <div id="collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>" class="accordion-collapse collapse" role="tabpanel"
          aria-labelledby="heading-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>">
-        <div class="accordion-body">
+        <div class="accordion-body card card-body">
           <% group[theme].each do |guidance| %>
             <%= sanitize guidance %>
           <% end %>
