remove spacing for accessiblity

--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -138,7 +138,6 @@ body {
 
 @import "components/forms";
 
-
 /* Dialog and Fullscreen API Styles */
 dialog {
   position: fixed;
@@ -160,7 +159,6 @@ dialog {
 ::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
 }
-
 
 /* Tables */
 
@@ -229,7 +227,7 @@ dialog {
   display: flex;
   border-bottom: 1px solid #eee;
   padding: 1.125rem 0;
-  justify-content: space-between;
+
   align-items: center;
 
   &.last {
@@ -280,6 +278,7 @@ dialog {
   font-weight: 300;
   line-height: normal;
   color: var(--dmpui-brand-blue-900);
+  margin-left: 1rem;
 
   &.status-completed {
     background-color: var(--dmpui-brand-green-100);
