React-client wip: Finished the research outputs...
... and fixed related bugs; Cleaned up some component code.

--- a/react-client/src/components/forms.scss
+++ b/react-client/src/components/forms.scss
@@ -245,6 +245,10 @@ input[type="submit"] {
   opacity: 0.5;
 }
 
+.group-hidden {
+  display: none;
+}
+
 .dmpui-search-form-container {
   padding: 2rem;
   background-color: var(--dmpui-brand-blue-100);
