--- a/react-client/src/components/forms.scss
+++ b/react-client/src/components/forms.scss
@@ -263,3 +263,27 @@ input[type="submit"] {
   padding: 2rem;
   background-color: var(--dmpui-brand-blue-100);
 }
+.dmpui-field-input-lookup-icon-wrapper {
+  position: relative;
+}
+.dmpui-field-input-spinner {
+  position: absolute;
+  top: 10px;
+  right: -30px;
+}
+#loading-spinner {
+  width: 24px;
+  height: 24px;
+}
+#loading-spinner {
+  animation: loading-spinner 1s linear infinite;
+}
+
+@keyframes loading-spinner {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
